--- a/clone_import.html
+++ b/clone_import.html
@@ -315,7 +315,7 @@
               }
           },
           requestDelay: 300,  
-          theme: "dark",          
+          theme: "blue-light",          
           };
 
         $("#ship-by").easyAutocomplete(options_trans);
@@ -1235,7 +1235,7 @@
             </div>
             <div class="col-3 text-left text-muted">ผู้ส่ง :
               <div class="btn-group col-6 text-center text-muted">
-                <input id="sup" type="text" class="form-control text-center" placeholder="พิมพ์ชื่อผู้ส่ง" data-index="1">
+                <input id="ship-by" type="text" class="form-control text-center" placeholder="พิมพ์ชื่อผู้ส่ง">
               </div>
             </div>
             <div class="col-4 text-left text-muted dropdown">นำของเข้า :
