--- a/clone_sale.html
+++ b/clone_sale.html
@@ -1021,6 +1021,7 @@
         $("#barcode-"+i).prop('id', 'barcode-'+(i-1));
         $("#name-"+i).prop('id', 'name-'+(i-1));
         $("#total-"+i).prop('id', 'total-'+(i-1));
+        $("#amount-" +i).attr('oninput', "chng_amt_edit("+(i-1)+")");
         $("#amount-"+i).prop('id', 'amount-'+(i-1));
         $("#dis-"+i).prop('id', 'dis-'+(i-1));
         $("#unit-"+i).prop('id', 'unit-'+(i-1));
