--- a/clone_sale.html
+++ b/clone_sale.html
@@ -550,6 +550,7 @@
               var i_enter = parseFloat($this.attr('data-index'));         
               if(i_enter == 2 && prod_id == 0){              
                 if(!isNaN($("#name").val())){
+                  $("#name:lang(en)");
                   console.log("barcode");                  
                 }else{
                   $.alert({
