--- a/a4.html
+++ b/a4.html
@@ -93,7 +93,7 @@
       ผู้รับสินค้า
     </div>
     <div style='margin-bottom: 10px;' class="fl-50 fs-120 field">
-      สมพร สว่างว้าบ
+      &emsp;
     </div>
     <div class="fl-40 fs-120">
       วันที่ส่งสินค้า
