--- a/cash_record.html
+++ b/cash_record.html
@@ -35,7 +35,7 @@
     <link href="css/untitled.css" rel="stylesheet">
 
     <script>
-        var datetime
+        var datetime;
         $(document).ready(function () {
             if(!localStorage.user_id){
                 $.alert({
@@ -44,7 +44,7 @@
                 content: "กรุณาเข้าสู่ระบบก่อน"
                 });
                 window.location = "login.html";
-            }  
+            } 
 
              if(localStorage.role == "user"){
                 $("#mb").remove();
@@ -121,10 +121,46 @@
                 success:function(data)
                 {
                     if(data == "success"){
+                    var winprint = window.open();
+                    winprint.document.write("<style>@page {size: auto; margin: 0mm;} .txt-right{ margin-right: 1cm; font-size: 1em; text-align:right; float: right; } .txt-left{ font-size: 1em; margin-left: 1cm; float: left; width: 40%; }.txt-left-100{ font-size: 1em; margin-left: 0.5cm; float: left; width: 100%; } .txt-ct{ float: center; font-size: 1em; text-align: center; margin-bottom: 0.2em} .left{margin-left: 0.5cm; float: left; width: 3.5cm; text-align: left;} .mid{float: left; width: 0.5cm; text-align: right;} .right{margin-right: 0.5cm; float: left; width: 2.5cm; text-align: right;} .left-title{margin-left: 0.5cm; float: left; width: 3cm; text-align: left; font-size: 0.9em;} .mid-title{float: left; width: 1.7cm; text-align: left; font-size: 0.9em;} .right-title{margin-right: 0.5cm; float: left; width: 1.8cm; text-align: right; font-size: 0.9em;}</style>"+   
+                    "<div style='width: 7.5cm;'>"+
+                      "<div class='txt-ct'>ใบสรุปการขายแต่ละกะ</div>"+
+                      "<div class='left-title'>วันที่ : 10/4/2561</div> <div class='mid-title'>เวลา 10:00</div> <div class='right-title'>ถึง 18:09</div>"+
+                      "<div class='txt-left-100'>พนักงาน : localStorage.name</div>"+
+                      
+                      "<hr style='width: 90%; border-top: 1px dashed; border-bottom: none;'>"+
+                      "<div class='txt-ct' style='text-decoration: underline;'>สรุปยอดแยกตามประเภท</div>"+
+                      "<div class='txt-left'>เงินสด : </div>"+
+                      "<div class='txt-right'>10,000 บาท</div><br>"+
+                      "<div class='txt-left'>ลูกหนี้ : </div>"+
+                      "<div class='txt-right'>7,000 บาท</div><br>"+
+                      "<div class='txt-left'>เงินโอน : </div>"+
+                      "<div class='txt-right'>3,000 บาท</div><br><br>"+
+                      "<div class='txt-left'>รวมทั้งสิ้น : </div>"+
+                      "<div class='txt-right'>20,000 บาท</div><br><br>"+
+
+                      "<div class='txt-ct' style='text-decoration: underline;'>สรุปตามยอดขายสินค้า</div>"+
+                      "<div class='txt-left'>ยอดก่อนหักส่วนลด : </div>"+
+                      "<div class='txt-right'>21,000 บาท</div><br>"+
+                      "<div class='txt-left'>หักส่วนลด : </div>"+
+                      "<div class='txt-right'>1,000 บาท</div><br>"+
+                      "<div class='txt-left'>คงเหลือ : </div>"+
+                      "<div class='txt-right'>20,000 บาท</div><br><br>"+
+                      "<div class='txt-left'>รวมเงินสด ส่งในกะนี้ : </div>"+
+                      "<div class='txt-right'>10,000 บาท</div><br><br><br>"+
+
+                      "<hr style='width: 90%; border-top: 1px dashed; border-bottom: none;'> "+ 
+                      "<div class='txt-left'>พิพม์ : 10/4/2561</div>"+
+                      "<div class='txt-right'>เวลา : 23:59</div><br><br><br><br>"+
+                    "</div>");
+                        winprint.document.close();
+                        winprint.focus();
+                        winprint.print();
+                        winprint.close();
                         window.location = "sale.html";
                     }
                 }
-            });    
+            });
         }
 
         function logout(){
