--- a/clone_sale.html
+++ b/clone_sale.html
@@ -1253,7 +1253,7 @@
                       "<div class='fl-20'><p class='fs-150 field'>"+cus_tel+"</p></div>"+
 
                       "<div class='fl-15'><p class='fs-150'>เลขที่ใบรายการ</p></div>"+
-                      "<div class='fl-35'><p class='fs-150 field'>data</p></div>"+
+                      "<div class='fl-35'><p class='fs-150 field'>"+data+"</p></div>"+
                       "<div class='fl-25'><p class='fs-150'>วันที่ เวลา ที่ทำรายการ</p></div>"+
                       "<div class='fl-30' style='margin-bottom: 80px;'><p class='fs-150 field'>"+datetime+"</p></div>"+
 
