--- a/manage_bill.html
+++ b/manage_bill.html
@@ -59,14 +59,14 @@
         var dt = "";
         var role;
         $(document).ready(function () {  
-            /*if(!localStorage.user_id){
+            if(!localStorage.user_id){
                 $.alert({
                 icon: 'fa fa-warning',
                 title: 'เตือน',
                 content: "กรุณาเข้าสู่ระบบก่อน"
                 });
                 window.location = "login.html";
-            }*/   
+            }  
 
             if(localStorage.role == "user"){
                 $.alert({
