--- a/manage_bill.html
+++ b/manage_bill.html
@@ -846,6 +846,16 @@
         function shift(){
             // load รายการขายภายในกะ
             // info-btn กดแล้วไปที่หน้า shift_bill?bill=1 (1-> bill_id)
+            $.ajax({
+                type: "POST",
+                url: "http://150.95.26.163:8080/gitmew/php/get_cash_order.php",                
+                cache: false,
+                crossDomain: true,
+                success: function (response) {                
+                    var obj = jQuery.parseJSON(response);
+                    console.log(obj);         
+                }
+            });
         }       
     </script>
 </head>
