--- a/clone_cash_record.html
+++ b/clone_cash_record.html
@@ -126,13 +126,41 @@
                 {
                     var obj = jQuery.parseJSON(data);
                     console.log(obj);
-                    if(obj == null){
+                    if(obj[0] == "none"){
                         $('#cash').text("0.00 บาท");
+                        cash = "0.00"; 
+                        check = false;                       
                     }else{
-                        $.each(obj, function(i, field){                      
-                            $('#cash').text(parseFloat(field.total_price).toFixed(2) + " บาท");
-                        });
-                    }                   
+                        $('#cash').text(parseFloat(obj[0].total_price).toFixed(2) + " บาท");
+                        cash = parseFloat(obj[0].total_price).toFixed(2);
+                        before_dt = obj[0].udt;     
+                        date = obj[0].datetime;        
+                    }
+                    if(obj[1] == "none"){
+                        transfer = "0.00";                        
+                    }else{                      
+                        transfer = parseFloat(obj[1].total_price).toFixed(2);
+                    }
+                    if(obj[2] == "none"){
+                        debtor = "0.00";                        
+                    }else{                      
+                        debtor = parseFloat(obj[2].total_price).toFixed(2);
+                    }
+                    if(obj[3] == "none"){
+                        sum = "0.00";                        
+                    }else{                       
+                        sum = parseFloat(obj[3].sum_price).toFixed(2);
+                    }
+                    if(obj[4] == "none"){
+                        dis = "0.00";                        
+                    }else{                      
+                        dis = parseFloat(obj[4].discount).toFixed(2);
+                    }
+                    if(obj[5] == "none"){
+                        total = "0.00";                        
+                    }else{                      
+                        total = parseFloat(obj[5].total_price).toFixed(2);
+                    }                         
                 }
             });    
         }
