--- a/clone_cash_record.html
+++ b/clone_cash_record.html
@@ -192,7 +192,8 @@
                         "<div style='width: 7.5cm;'>"+
                         "<div class='txt-ct'>ใบสรุปการขายแต่ละกะ</div>"+
                         "<div class='left-title'>วันที่ : "+date+"</div> <div class='mid-title'>เวลา "+time+"</div> <div class='right-title'>ถึง "+time2+"</div>"+
-                        "<div class='txt-left-100'>พนักงาน : "+localStorage.name+"</div>"+
+                        "<div class='txt-left'>พนักงาน : "+localStorage.name+"</div>"+
+                        "<div class='txt-right'>สาขา : สาขา</div>"+
                         
                         "<hr style='width: 90%; border-top: 1px dashed; border-bottom: none;'>"+
                         "<div class='txt-ct' style='text-decoration: underline;'>สรุปยอดแยกตามประเภท</div>"+
